--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <link href="//cdn.syncfusion.com/ej2/ej2-inputs/styles/material.css" rel="stylesheet" />
   <link href="//cdn.syncfusion.com/ej2/ej2-navigations/styles/material.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.9da151472358c8e4c022.css"></head>
+</head>
 <body>
  
   <app-root></app-root>
-<script src="polyfills-es5.7aaacbf76784c780632a.js" nomodule defer></script><script src="polyfills-es2015.0fe6949bc5ff4b784062.js" type="module"></script><script src="scripts.6cf4da7113bcd1218d80.js" defer></script><script src="runtime-es2015.85f895af57b038f1e5b4.js" type="module"></script><script src="main-es2015.ef1a9e78f4c84df100f6.js" type="module"></script><script src="runtime-es5.85f895af57b038f1e5b4.js" nomodule defer></script><script src="main-es5.ef1a9e78f4c84df100f6.js" nomodule defer></script></body>
+<script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="scripts.js" defer></script><script src="runtime-es2015.js" type="module"></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
